--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -391,6 +391,32 @@
        <string>TextLabel</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>100</y>
+        <width>121</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Najblizszy Wazny Dzień</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>120</y>
+        <width>141</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Za kilka dni: </string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QComboBox" name="comboBox">
@@ -414,6 +440,16 @@
     </property>
     <property name="text">
      <string>Przypominacz</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_2">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>320</y>
+      <width>69</width>
+      <height>22</height>
+     </rect>
     </property>
    </widget>
   </widget>
