--- a/Kontrahent/kontrahent.ui
+++ b/Kontrahent/kontrahent.ui
@@ -701,6 +701,19 @@
      <string>Miasto:</string>
     </property>
    </widget>
+   <widget class="QLabel" name="lblCheckOkNo">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>340</y>
+      <width>50</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
    <zorder>scrollArea_3</zorder>
    <zorder>lineEditWczytajUlica</zorder>
    <zorder>comboBoxWczytajMiasta</zorder>
@@ -740,6 +753,7 @@
    <zorder>lineEditWczytajNazwisko</zorder>
    <zorder>comboBoxWczytajWojewodztwa</zorder>
    <zorder>pushButton_2</zorder>
+   <zorder>lblCheckOkNo</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
