--- a/Kontrahent/kontrahentdodajkraj.ui
+++ b/Kontrahent/kontrahentdodajkraj.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>527</width>
+    <width>255</width>
     <height>176</height>
    </rect>
   </property>
@@ -27,8 +27,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>100</y>
+      <x>80</x>
+      <y>90</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -40,8 +40,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>60</y>
+      <x>170</x>
+      <y>50</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -53,8 +53,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>60</y>
+      <x>80</x>
+      <y>50</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -89,8 +89,8 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>100</y>
+      <x>170</x>
+      <y>90</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -99,13 +99,26 @@
      <string>Zamknij</string>
     </property>
    </widget>
+   <widget class="QLabel" name="lblCheckOkNo">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>60</y>
+      <width>50</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>527</width>
+     <width>255</width>
      <height>21</height>
     </rect>
    </property>
