--- a/Urzadzenia/urzadzeniadodajmodel.ui
+++ b/Urzadzenia/urzadzeniadodajmodel.ui
@@ -60,6 +60,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="lblCheckOkNo">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>50</y>
+      <width>50</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
