--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -465,14 +465,27 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>250</y>
+      <x>610</x>
+      <y>330</y>
       <width>141</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Za kilka dni: </string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnMagazyn">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>220</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Magazyn</string>
     </property>
    </widget>
   </widget>
